--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="text-container">
 
             <!-- <img src="https://png.pngtree.com/background/20210709/original/pngtree-red-stereo-border-love-valentines-day-background-picture-image_905497.jpg" width="150px" alt=""> -->
-            <h1>SORRY MY BACCHI!!!&#127801;</h1>
+            <h1>SORRY!!!&#127801;</h1>
 
 
             <p>I hope you know how much you mean to me. You are such an important part of my life. In fact, you are the
